# gotify_client_app

./: CMakeLists.txt  GotifyClientApp.conf  README.md
.github/workflows/: cmake-multi-platform.yml
src/: JSON.h  file.c  main.c  main.h
